[package]
name = "wasm-practice"
version = "0.1.0"
authors = ["MATSUMOTO, Katsuyoshi <github@katsyoshi.org>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
uuid = { version = "*", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = "*"
web-sys = { features = ["Document", "Element", "HtmlElement", "Node", "Window"] }
